# server/internal/model/req/req.go
@@ -1,0 +1,6 @@
+package req
+
+type Pagination struct {
+	Page     int `json:"page" form:"page"`
+	PageSize int `json:"page_size" form:"page_size"`
+}
